[package]
name = "teloxide-tba66-test"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
log = "0.4.21"
pretty_env_logger = "0.5.0"

teloxide = { git = "https://github.com/syrtcevvi/teloxide.git", branch = "feature/support-tba-6.6", features = ["throttle"]}
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
